# signalbox

./: .flake8  .gitignore  AGENTS.md  AGENTS.md.bak  ALERTS_DESIGN.md  Brainstorm.md  DISTRIBUTING_MACOS_APP.md  LICENSE  MANIFEST.in  NOTIFICATION_IMPLEMENTATION.md  README.md  REBRANDING.md  SECURITY.md  TRAY_USAGE.md  basic-review-summary.md  cli_expansion.md  config.yaml  dev.sh  generate_icons.py  groups.yaml  issues  main.py  pyproject.toml  requirements.txt  run_all_signalbox_commands.sh  setup.py  signalbox-tray-launcher.sh  signalbox.py  signalbox_backup.py  taskbar.md  team-review-summary.md  test_alerts_debug.py  test_all.sh  todo
.github/: copilot-instructions.md
config/: signalbox.yaml
config/groups/: basic.yaml  deployment.yaml  example.yaml  maintenance.yaml  monitoring.yaml  scheduled.yaml  test.yaml
config/scripts/: basic.yaml  development.yaml  system.yaml  system_admin.yaml  test.yaml  web_monitoring.yaml
core/: __init__.py  alerts.py  cli_commands.py  cli_output.py  cli_output_group.py  cli_output_run.py  cli_output_tables.py  config.py  exceptions.py  executor.py  exporters.py  helpers.py  log_manager.py  log_rotation.py  logger.py  notifications.py  runtime.py  signalbox.py  tray_app.py  validator.py
documentation/: CLI_IMPLEMENTATION_SPEC.md  CLI_RECOMMENDATIONS.md  CONFIG_ARCHITECTURE.md  CONFIG_GUIDE.md  CONFIG_REFERENCE.md  CONFIG_SYSTEM.md  ERROR_HANDLING.md  EXECUTION_MODES.md  FILE_STRUCTURE.md  NOTIFICATIONS.md  SCHEDULING_EXAMPLES.md  WRITING_SCRIPTS.md
groups/: basic.yaml  scheduled.yaml  test.yaml
scripts/: basic.yaml  system.yaml  test.yaml
signalbox/: cli_commands.py  executor.py
tests/: __init__.py  conftest.py  test_alerts.py  test_cli_commands.py  test_config.py  test_config_options.py  test_exceptions.py  test_executor.py  test_exporters.py  test_helpers.py  test_log_manager.py  test_notifications.py  test_runtime.py  test_validator.py
(+54 files in other folders)
